[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hovedmenu.gd" type="Script" id=1]

[node name="Hovedmenu" type="Control"]
margin_left = 343.0
margin_top = 60.0
margin_right = 343.0
margin_bottom = 60.0
script = ExtResource( 1 )

[node name="Play" type="Button" parent="."]
margin_right = 363.0
margin_bottom = 47.0
text = "Play"

[node name="LogIn" type="Button" parent="."]
margin_left = 1.0
margin_top = 66.0
margin_right = 361.0
margin_bottom = 114.0
text = "Register or Log In"

[node name="Exit" type="Button" parent="."]
margin_left = 1.0
margin_top = 137.0
margin_right = 363.0
margin_bottom = 185.0
text = "Exit"

[node name="popup" type="MarginContainer" parent="."]
margin_left = -88.0
margin_top = 24.0
margin_right = 450.0
margin_bottom = 163.0

[node name="popbutton" type="Button" parent="popup"]
margin_right = 538.0
margin_bottom = 139.0
text = "You have to create an account and log in to start the game, click here to continue"

[node name="popup2" type="MarginContainer" parent="."]
margin_left = -87.0
margin_top = 23.0
margin_right = 452.0
margin_bottom = 165.0

[node name="popbutton2" type="Button" parent="popup2"]
margin_right = 539.0
margin_bottom = 142.0
text = "You are already logged in, please click here and select a different option"

[node name="tutorial" type="MarginContainer" parent="."]
margin_left = -110.0
margin_top = 26.0
margin_right = 499.0
margin_bottom = 297.0

[node name="ColorRect" type="ColorRect" parent="tutorial"]
margin_right = 609.0
margin_bottom = 271.0
color = Color( 0.168627, 0.168627, 0.168627, 1 )

[node name="Label" type="Label" parent="tutorial"]
margin_top = 60.0
margin_right = 609.0
margin_bottom = 210.0
text = "

Highschool is finally over but you now have to take care of yourself.

You are currently living with your parents but if you manage to earn enough money you will be
able to go to university.

Make sure to go to work to earn money, the better of a job you do the more money you will 
earn. But look out for your energy or hunger!"

[node name="endtutorial" type="Button" parent="."]
margin_left = 95.0
margin_top = 248.0
margin_right = 312.0
margin_bottom = 286.0
text = "Start game"

[node name="medium" type="Button" parent="."]
margin_left = 132.0
margin_top = 34.0
margin_right = 263.0
margin_bottom = 76.0
text = "Medium difficulty"

[node name="hard" type="Button" parent="."]
margin_left = 328.0
margin_top = 33.0
margin_right = 470.0
margin_bottom = 77.0
text = "Hard difficulty"

[node name="easy" type="Button" parent="."]
margin_left = -74.0
margin_top = 33.0
margin_right = 75.0
margin_bottom = 74.0
text = "Easy difficulty"

[node name="easypopup" type="Button" parent="."]
margin_left = -57.0
margin_top = 55.0
margin_right = 457.0
margin_bottom = 222.0
text = "Easy difficulty is already selected, click here and start game"

[node name="mediumpopup" type="Button" parent="."]
margin_left = -52.0
margin_top = 55.0
margin_right = 462.0
margin_bottom = 222.0
text = "Medium difficulty is still under developement,  click here to remove"

[node name="hardpopup" type="Button" parent="."]
margin_left = -52.0
margin_top = 58.0
margin_right = 462.0
margin_bottom = 225.0
text = "Hard difficulty is still under developement, click here to remove"

[connection signal="button_down" from="Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="LogIn" to="." method="_on_LogIn_button_down"]
[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]
[connection signal="button_down" from="popup/popbutton" to="." method="_on_popbutton_button_down"]
[connection signal="button_down" from="popup2/popbutton2" to="." method="_on_popbutton2_button_down"]
[connection signal="button_down" from="endtutorial" to="." method="_on_endtutorial_button_down"]
[connection signal="button_down" from="medium" to="." method="_on_medium_button_down"]
[connection signal="button_down" from="hard" to="." method="_on_hard_button_down"]
[connection signal="button_down" from="easy" to="." method="_on_easy_button_down"]
[connection signal="button_down" from="easypopup" to="." method="_on_easypopup_button_down"]
[connection signal="button_down" from="mediumpopup" to="." method="_on_mediumpopup_button_down"]
[connection signal="button_down" from="hardpopup" to="." method="_on_hardpopup_button_down"]
